--- a/sort.html
+++ b/sort.html
@@ -1,7 +1,8 @@
 <!DOCTYPE html>
 <html>
 <head>
-	<title></title>
+	<meta charset="utf-8">
+	<title>排序算法</title>
 	<script type="text/javascript">
 		//交换排序--冒泡
 		var a = [3,9,2,1,5,2,8,5];
@@ -17,7 +18,7 @@
 					}
 				}
 			}
-			console.log(a);
+			return a;
 		}
 
 	/*-----------------------------------------------------------------------*/
@@ -63,7 +64,7 @@
 					}
 				}
 			}
-					console.log(a);
+			return a;
 		} 
 
 	/*-----------------------------------------------------------------------*/
@@ -84,7 +85,7 @@
 			a[i] = a[mi];
 			a[mi] = temp;
 		}
-		console.log(a);
+		return a;
 	}
 
 	//希尔排序 （分组插入排序） 每次间隔[n/2，n/4，···,1]的元素单独进行插入排序
@@ -112,10 +113,9 @@
 			shellInsertSort(a, gap);
 			gap = parseInt(gap/2);
 		}
-		console.log(a);
+		return a;
 	}
-</script>
-<script type="text/javascript">
+
 	//堆排序
 	//两个步骤 1.建堆 2.调整
 	//建大顶堆，然后把堆顶元素放到队列后面
@@ -142,7 +142,7 @@
 				break;
 			}
 		}
-		console.log(a);
+		return a;
 	}
 
 	function buildHeap(a) {
@@ -162,13 +162,9 @@
 			a[0] = temp;
 			adjustHeap(a, 0, i);
 		}
-		// console.log(a);
+		return a;
 	}
 
-	heapSort(a);
-
-</script>
-<script type="text/javascript">
 	//快排
 	//思想是将一个元素（通常是头或尾）选作基准元素，将队列划分为大的一边小的一边，这样这个元素就找到了他的位置，接下去递归
 	
@@ -202,14 +198,45 @@
 			quickSort(a, bottom,key-1);
 			quickSort(a, key+1 ,top);
 		}
+		return a;
 	}
 
-	quickSort(a, 0, a.length-1);
-	console.log(a);
 </script>
 
 </head>
 <body>
+	<div class="container">
+		
+	</div>
+	<script type="text/javascript">
+		document.write('未排序数组'+'<br>');
+		var unSortedArray = [8,129,2,49,1,29,30,20,6];
+		document.write(unSortedArray+'<br><br>');
 
+		var sortedArray = bubbleSort(unSortedArray);
+		document.write('冒泡排序'+'<br>');
+		document.write(sortedArray+'<br><br>');
+
+		sortedArray = insertSort(unSortedArray);
+		document.write('插入排序'+'<br>');
+		document.write(sortedArray+'<br><br>');
+
+		sortedArray = selectSort(unSortedArray);
+		document.write('选中排序'+'<br>');
+		document.write(sortedArray+'<br><br>');
+
+		sortedArray = shellSort(unSortedArray);
+		document.write('希尔排序'+'<br>');
+		document.write(sortedArray+'<br><br>');
+
+		sortedArray = heapSort(unSortedArray);
+		document.write('堆排序'+'<br>');
+		document.write(sortedArray+'<br><br>');
+
+		sortedArray = quickSort(unSortedArray,0 ,unSortedArray.length-1);
+		document.write('快速排序'+'<br>');
+		document.write(sortedArray+'<br><br>');
+
+	</script>
 </body>
 </html>
